--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -7,8 +7,9 @@
     <meta name="author" content=""/>
     <title>Starter Template for Bootstrap</title>
 
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/assets/css/main.css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
 </head>
 
@@ -36,39 +37,24 @@
 </div>
 
 <div class="container">
-    <form th:action="@{/logout}" method="post">
-        <input type="submit" value="Logout"/>
-    </form>
 
     <div class="starter-template">
-        <div class="row publisher">
-            <form method="post" th:action="@{/share}">
-                <div class="form-group">
-                    <div class="col-md-12">
-                    <textarea name="content" class="form-control"
-                              placeholder="what in your mind ?"></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-1 pull-right">
-                        <button type="submit" class="btn btn-primary">Share</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="row feed" th:each="post : ${posts}">
-            <div class="col-md-12">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <p th:text="${post.getContent()}"></p>
-                   </div>
-               </div>
-           </div>
-       </div>
+        <form th:action="@{/login}" method="post" role="form">
+            <legend>Login</legend>
+
+            <div class="form-group">
+                <label for="">Username</label>
+                <input type="text" class="form-control" name="username" id="" placeholder="Username"/>
+                <label for="">Password</label>
+                <input type="password" class="form-control" name="password" id="" placeholder="password"/>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
    </div>
 </div>
 
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
